fix: change doc/api.yaml file; change jwt guard with public decorator; change refresh guard and strategy
